examples/test/testpolicy12212.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy12212
  namespace: namespace466
spec:
  podSelector:
    matchLabels:
      key4: value28
      key30: value17
      key5: value45
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key26: value47
          key1: value44
      podSelector:
        matchLabels:
          key7: value37
          key27: value36
          key8: value13
